--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
-    "z_values = [cities[]]"
+    "z_values = [cities[0][]]"
    ]
   },
   {
