--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "outputs": [],
    "source": [
     "y_values = [cities[0]['Population'], cities[1]['Population'], cities[2]['Population']]\n",
-    "z_values = [cities[0]['Area'], cities[1]['A, cities[3]['rea']]"
+    "z_values = [cities[0]['Area'], cities[1]['Area', cities[3]['rea']]"
    ]
   },
   {
